--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "author": "Aaron Brown",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "concurrently": "^8.2.1",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
@@ -24,6 +25,7 @@
     "mongoose": "^7.5.0",
     "nodemon": "^3.0.1",
     "passport": "^0.5.3",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^13.6.0"
   }
 }
